# parson

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  appveyor.yml  index.html  main.c  makefile  meson.build  package.json  params.json  parse.c  parson.c  parson.h  parson_int.h  serialize.c  test.cmake.in  tests.c  tests.sh  version.cmake.in
.github/: FUNDING.yml
.github/workflows/: build.yml  mayhem.yml
mayhem/: Mayhemfile
test_hash_collisions.dSYM/Contents/: Info.plist
testcpp.dSYM/Contents/: Info.plist
tests/: test_1_1.txt  test_1_2.txt  test_2.txt  test_2_comments.txt  test_2_pretty.txt  test_5.txt  test_url_encoded.txt
tests/fuzzers/: parson_fuzzer.c
